--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "@supabase/supabase-js": "^2.43.2",
     "framer-motion": "^11.2.4",
     "next": "14.2.3",
