--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@supabase/supabase-js": "^2.43.2",
+    "canvas-confetti": "^1.9.3",
     "framer-motion": "^11.2.6",
     "next": "14.2.3",
     "react": "^18",
